안내 작업중

--- a/index.html
+++ b/index.html
@@ -38,6 +38,33 @@
                 </div>
             </div>
         </section>
+        <section class="info">
+            <div class="tab">
+                <ul class="tab__list">
+                    <li class="tab__item">
+                        <a href="" class="tab__link">신랑측</a>
+                    </li>
+                    <li class="tab__item is-active">
+                        <a href="" class="tab__link">안내</a>
+                    </li>
+                    <li class="tab__item">
+                        <a href="" class="tab__link">신부측</a>
+                    </li>
+                </ul>
+            </div>
+            <article class="tab__content type-info is-active">
+                <h2 class="info__tit">오시는 길</h2>
+                <div class="info__box">
+                    <div class="map">
+                        <img src="images/map.png" class="img-w100" alt="">
+                        <h3 class="map__tit">보테가마지오 웨딩홀</h3>
+                        <p class="map__txt">서울특별시 성동구 서울숲2길 32-14<br> 갤러리아 포레 보테가마지오 G층(B2)</p>
+                        <p class="map__tel">02-3409-0123</p>
+                        <a href="tel:02-3409-0123" class="map__btn">웨딩홀 전화걸기</a>
+                    </div>
+                </div>
+            </article>
+        </section>
     </div>
 </body>
 </html>
