안내 작업완료

--- a/index.html
+++ b/index.html
@@ -42,17 +42,20 @@
             <div class="tab">
                 <ul class="tab__list">
                     <li class="tab__item">
-                        <a href="" class="tab__link">신랑측</a>
+                        <a href="man" class="tab__link">신랑측</a>
                     </li>
                     <li class="tab__item is-active">
-                        <a href="" class="tab__link">안내</a>
+                        <a href="info" class="tab__link">안내</a>
                     </li>
                     <li class="tab__item">
-                        <a href="" class="tab__link">신부측</a>
+                        <a href="woman" class="tab__link">신부측</a>
                     </li>
                 </ul>
             </div>
-            <article class="tab__content type-info is-active">
+            <section class="tab__content type-man">
+                신랑
+            </section>
+            <section class="tab__content type-info is-active">
                 <h2 class="info__tit">오시는 길</h2>
                 <div class="info__box">
                     <div class="map">
@@ -63,8 +66,82 @@
                         <a href="tel:02-3409-0123" class="map__btn">웨딩홀 전화걸기</a>
                     </div>
                 </div>
-            </article>
+                <div class="info__box type-btn">
+                    <a href="" class="info__link">
+                        <h3 class="info__blank type-naver">
+                            네이버 지도<br> 
+                            오시는 길
+                        </h3>
+                    </a>
+                </div>
+                <div class="info__box type-btn">
+                    <a href="" class="info__link">
+                        <h3 class="info__blank">
+                            카카오 지도<br> 
+                            오시는 길
+                        </h3>
+                    </a>
+                </div>
+                <article class="schedule">
+                    <h2 class="info__tit">일정 안내</h2>
+                    <h3 class="schedule__tit">2021년 11월</h3>
+                    <ul class="schedule__list">
+                        <li class="schedule__item">Mo</li>
+                        <li class="schedule__item">Tu</li>
+                        <li class="schedule__item">We</li>
+                        <li class="schedule__item">Th</li>
+                        <li class="schedule__item">Fr</li>
+                        <li class="schedule__item">Sa</li>
+                        <li class="schedule__item">Su</li>
+                        <li class="schedule__item">1</li>
+                        <li class="schedule__item">2</li>
+                        <li class="schedule__item">3</li>
+                        <li class="schedule__item">4</li>
+                        <li class="schedule__item">5</li>
+                        <li class="schedule__item">6</li>
+                        <li class="schedule__item">7</li>
+                        <li class="schedule__item">8</li>
+                        <li class="schedule__item">9</li>
+                        <li class="schedule__item">10</li>
+                        <li class="schedule__item">11</li>
+                        <li class="schedule__item">12</li>
+                        <li class="schedule__item">13</li>
+                        <li class="schedule__item">14</li>
+                        <li class="schedule__item">15</li>
+                        <li class="schedule__item">16</li>
+                        <li class="schedule__item">17</li>
+                        <li class="schedule__item">18</li>
+                        <li class="schedule__item">19</li>
+                        <li class="schedule__item">20</li>
+                        <li class="schedule__item">21</li>
+                        <li class="schedule__item">22</li>
+                        <li class="schedule__item">23</li>
+                        <li class="schedule__item">24</li>
+                        <li class="schedule__item">25</li>
+                        <li class="schedule__item">26</li>
+                        <li class="schedule__item is-active">27</li>
+                        <li class="schedule__item">28</li>
+                        <li class="schedule__item">29</li>
+                        <li class="schedule__item">30</li>
+                        <li class="schedule__item type-grey">1</li>
+                        <li class="schedule__item type-grey">2</li>
+                        <li class="schedule__item type-grey">3</li>
+                        <li class="schedule__item type-grey">4</li>
+                        <li class="schedule__item type-grey">5</li>
+                    </ul>
+                    <div class="schedule__box">
+                       <p class="schedule__txt">
+                        2021년 11월 27일 |  6시 30분
+                       </p>
+                    </div>
+                </article>
+            </section>
+            <section class="tab__content type-woman">
+                신부
+            </section>
+
         </section>
     </div>
+    <script src="js/wedding.js"></script>
 </body>
 </html>
