--- a/index.html
+++ b/index.html
@@ -42,20 +42,45 @@
             <div class="tab">
                 <ul class="tab__list">
                     <li class="tab__item">
-                        <a href="man" class="tab__link">신랑측</a>
+                        <a href="man" data-num="0" class="tab__link">신랑측</a>
                     </li>
                     <li class="tab__item is-active">
-                        <a href="info" class="tab__link">안내</a>
+                        <a href="info" data-num="1" class="tab__link">안내</a>
                     </li>
                     <li class="tab__item">
-                        <a href="woman" class="tab__link">신부측</a>
+                        <a href="woman" data-num="2" class="tab__link">신부측</a>
                     </li>
                 </ul>
             </div>
             <section class="tab__content type-man">
-                신랑
+                <h2 class="info__tit">신랑측 안내</h2>
+                <div class="info__box">
+                    <img src="images/man_bg.png" class="img-w100" alt="">
+                    <div class="profile">
+                        <div class="profile__box">
+                            <div class="profile__img">
+                                <img src="images/man.png" class="img-w100" alt="">
+                            </div>
+                            <p class="profile__txt">강재식 · 이계화의 장남</p>
+                            <p class="profile__tit">강태완</p>
+                        </div>
+                    </div>
+                    <div class="info__inner">
+                        <div class="address">
+                            <dl class="address__dl">
+                                <dt class="address__dt type-phone">신랑측 연락처</dt>
+                                <dd class="address__dd">010-0000-0000 / 010-0000-0000</dd>
+                                <dt class="address__dt type-letter">마음 보내실 곳</dt>
+                                <dd class="address__dd">
+                                    농협 000-0000-0000 ( 강태완 )<br>
+                                    농협 000-0000-0000 ( 강태완 )
+                                </dd>
+                            </dl>
+                        </div>
+                    </div>
+                </div>
             </section>
-            <section class="tab__content type-info is-active">
+            <section class="tab__content is-active type-info">
                 <h2 class="info__tit">오시는 길</h2>
                 <div class="info__box">
                     <div class="map">
@@ -137,7 +162,32 @@
                 </article>
             </section>
             <section class="tab__content type-woman">
-                신부
+                <h2 class="info__tit">신부측 안내</h2>
+                <div class="info__box">
+                    <img src="images/woman_bg.png" class="img-w100" alt="">
+                    <div class="profile">
+                        <div class="profile__box">
+                            <div class="profile__img">
+                                <img src="images/woman.png" class="img-w100" alt="">
+                            </div>
+                            <p class="profile__txt">구범수 · 김혜경의 장녀</p>
+                            <p class="profile__tit">구슬기</p>
+                        </div>
+                    </div>
+                    <div class="info__inner">
+                        <div class="address">
+                            <dl class="address__dl">
+                                <dt class="address__dt type-phone">신부측 연락처</dt>
+                                <dd class="address__dd">010-0000-0000 / 010-0000-0000</dd>
+                                <dt class="address__dt type-letter">마음 보내실 곳</dt>
+                                <dd class="address__dd">
+                                    농협 000-0000-0000 ( 구슬기 ) <br>
+                                    농협 000-0000-0000 ( 구슬기 )
+                                </dd>
+                            </dl>
+                        </div>
+                    </div>
+                </div>
             </section>
 
         </section>
