웨딩 작업완료

--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
                         <div class="address">
                             <dl class="address__dl">
                                 <dt class="address__dt type-phone">신랑측 연락처</dt>
-                                <dd class="address__dd">010-0000-0000 / 010-0000-0000</dd>
+                                <dd class="address__dd">010-4500-1361</dd>
                                 <dt class="address__dt type-letter">마음 보내실 곳</dt>
                                 <dd class="address__dd">
-                                    농협 000-0000-0000 ( 강태완 )<br>
-                                    농협 000-0000-0000 ( 강태완 )
+                                    국민 022-21-0725-487 ( 강재식 )<br>
+                                    국민 022201-04-124466 ( 강태완 )
                                 </dd>
                             </dl>
                         </div>
@@ -84,7 +84,9 @@
                 <h2 class="info__tit">오시는 길</h2>
                 <div class="info__box">
                     <div class="map">
-                        <img src="images/map.png" class="img-w100" alt="">
+                        <div class="map__box">
+                            <div id="map" class="map__api"></div>
+                        </div>
                         <h3 class="map__tit">보테가마지오 웨딩홀</h3>
                         <p class="map__txt">서울특별시 성동구 서울숲2길 32-14<br> 갤러리아 포레 보테가마지오 G층(B2)</p>
                         <p class="map__tel">02-3409-0123</p>
@@ -178,7 +180,7 @@
                         <div class="address">
                             <dl class="address__dl">
                                 <dt class="address__dt type-phone">신부측 연락처</dt>
-                                <dd class="address__dd">010-0000-0000 / 010-0000-0000</dd>
+                                <dd class="address__dd">010-7227-1298</dd>
                                 <dt class="address__dt type-letter">마음 보내실 곳</dt>
                                 <dd class="address__dd">
                                     농협 000-0000-0000 ( 구슬기 ) <br>
@@ -192,6 +194,7 @@
 
         </section>
     </div>
+    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=72f2ddd2d2583dc15153197ee4211fae"></script>
     <script src="js/wedding.js"></script>
 </body>
 </html>
