맵 및 계좌 추가

--- a/index.html
+++ b/index.html
@@ -183,8 +183,8 @@
                                 <dd class="address__dd">010-7227-1298</dd>
                                 <dt class="address__dt type-letter">마음 보내실 곳</dt>
                                 <dd class="address__dd">
-                                    농협 000-0000-0000 ( 구슬기 ) <br>
-                                    농협 000-0000-0000 ( 구슬기 )
+                                    농협 352-0057-2771-43 ( 구범수 ) <br>
+                                    농협 223023-56-062241 ( 김혜경 )
                                 </dd>
                             </dl>
                         </div>
