링크값 수정

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     </div>
                 </div>
                 <div class="info__box type-btn">
-                    <a href="" class="info__link">
+                    <a href="https://map.naver.com/v5/entry/place/31494641?c=14141894.6494399,4515415.8256100,15,0,0,0,dh" target="_blank" class="info__link">
                         <h3 class="info__blank type-naver">
                             네이버 지도<br> 
                             오시는 길
@@ -102,7 +102,7 @@
                     </a>
                 </div>
                 <div class="info__box type-btn">
-                    <a href="" class="info__link">
+                    <a href="https://map.kakao.com/?itemId=133745576" target="_blank" class="info__link">
                         <h3 class="info__blank">
                             카카오 지도<br> 
                             오시는 길
