--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta property="og:image"content="images/thumbnail.jpg" />
+    <meta property="og:image"content="images/thumbnail.jpg" />
+    <meta name="format-detection" content="telephone=no">
     <title>모바일 청첩장</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
